--- a/src/app/shared/cart-drawer/cart-drawer.component.html
+++ b/src/app/shared/cart-drawer/cart-drawer.component.html
@@ -1,8 +1,8 @@
 
 <!-- drawer component -->
-<div id="cart-drawer" class="fixed top-0 right-0 z-40 h-screen p-4 overflow-y-auto transition-transform translate-x-full bg-white w-1/3 dark:bg-gray-800" tabindex="-1" aria-labelledby="cart-drawer-label">
+<div id="cart-drawer" class="fixed top-0 right-0 z-40 h-screen p-4 overflow-y-auto transition-transform translate-x-full bg-white w-1/3 dark:bg-gray-800" tabindex="-1" aria-labelledby="cart-drawer-label" aria-hidden="true">
    <fa-icon class="mr-2 text-gray-500 dark:text-gray-400" [icon]="faCartShopping"></fa-icon>
-   <h3 id="cart-drawer-label" class="inline-flex items-center text-base font-semibold text-gray-500 dark:text-gray-400 text-xl">
+   <h3 id="cart-drawer-label" class="inline-flex items-center text-base font-semibold text-gray-500 dark:text-gray-400 text-xl" aria-hidden="true">
       {{ 'CART_DRAWER._title' | translate }}
    </h3>
    <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700">
@@ -13,16 +13,16 @@
       <span class="sr-only">{{ 'CART_DRAWER._close' | translate }}</span>
    </button>
 
-   <div class="grid grid-flow-row auto-rows-max">
+   <div class="h-3/4 grid grid-flow-row auto-rows-max overflow-y-auto p-2">
       @for (item of items; track item) {
             <div class="flex justify-between w-full mt-2 mb-2 rounded-lg bg-secondary-50/95 dark:bg-gray-700 dark:border-gray-800 border-secondary-50 border">
-               <a href="#" class="flex p-2 box-decoration-clone">
+               <button type="button" (click)="deleteProduct(item)" class="flex p-2 box-decoration-clone">
                   @if (item.attachment) {
                      <img class="rounded-t-lg w-fit h-[100px]" src="{{getProductImage(item.attachment)}}" alt="">
                   } @else {
                      <img class="rounded-t-lg w-fit h-[100px]" src="https://placehold.co/600x400/svg" alt="">
                   }
-               </a>
+               </button>
                <div class="p-2 flex items-center">
                   <p class="text-lg text-gray-700 dark:text-gray-400">{{item.name}}</p>
                </div>               
@@ -34,19 +34,33 @@
                       </div>
                   }
                </div>
+               <div class="p-2 flex items-center">
+                  <button type="button" (click)="deleteProduct(item)" class="h-fit text-blue-700 hover:bg-gray-300 hover:text-white focus:ring-4 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center dark:text-blue-500 dark:hover:text-white dark:hover:bg-gray-600">
+                     <svg class="w-[12px] h-[12px] text-gray-700 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                      </svg>
+                  </button>
+               </div>
             </div>
       } @empty {
-         {{ 'CART_DRAWER._empty' | translate }}.
+         <p class="text-gray-700 dark:text-gray-400">{{ 'CART_DRAWER._empty' | translate }}.</p>
       } 
    </div>
    
    <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700">
-   <div class="grid grid-cols-2 mb-4">
-      <p class="ml-2 text-sm text-gray-500 dark:text-gray-400">{{ 'CART_DRAWER._subtotal' | translate }}:</p>
-      <p class="flex justify-end mr-2 text-sm text-gray-500 dark:text-gray-400">40$</p>
+   <div class="flex block">
+      <p class="flex float-left w-1/2 ml-2 text-sm text-gray-500 dark:text-gray-400">{{ 'CART_DRAWER._subtotal' | translate }}:</p>
+      <hr class="h-px my-2 bg-gray-200 border-0 dark:bg-gray-700">
+         <div class="flex grid grid-cols-1 grid-flow-row w-1/2">
+            @for (price of totalPrice; track price) {
+               <p class="flex block justify-end mr-2 text-sm text-gray-500 dark:text-gray-400">{{price.price}} {{price.unit}} {{price.priceType}}</p>
+            } @empty {
+               <p class="flex flex-right text-gray-700 dark:text-gray-400 justify-end">0.</p>
+            }
+         </div>
    </div>  
    
-   <div>
+   <div class="mt-2">
       <a href="#" class="inline-flex w-full items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">{{ 'CART_DRAWER._purchase' | translate }} <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
   </svg></a>
