--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 
-<div class="static p-4">
+<div class="container mx-auto static">
 <!-- Jumbo section -->
 <section id="jumbo" class="">
     <div class="pt-8 px-4 mx-auto max-w-screen-xl text-center lg:pt-16 lg:px-12">
@@ -22,8 +22,8 @@
     </div>
   </section>
   <!-- End Jumbo section -->
-  
-  <section class="content mx-auto py-8 px-4 mx-auto max-w-screen-xl lg:py-16 w-full flex items-center">
+
+  <section class="content mx-auto pt-8 pb-5 px-4 mx-auto max-w-screen-xl lg:pb-5 lg:pt-16 w-full flex items-center" [ngClass]="isFilterPanelShown ? 'sticky top-[118px] backdrop-blur-sm': 'sticky top-[72px] backdrop-blur-sm'">
     <img src="assets/logos/DOME_Icon.svg" class="h-[100px]">
     <form class="mx-5 w-full">
       <div class="flex">
@@ -60,10 +60,7 @@
     </form>
     <img src="assets/logos/DOME_Icon.svg" class="h-[100px]">
   </section>
-  
+
   <bae-off-gallery></bae-off-gallery>
   <bae-off-featured></bae-off-featured>
-
-
-
-
+</div>
