--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,16 +1,16 @@
-<div class="w-full bg-secondary-50 rounded-lg dark:bg-white dark:border-gray-700 border-secondary-50 border">
-  <a href="#" class="flex justify-center w-full box-decoration-clone">
+<div class="w-full h-[500px] bg-secondary-50 rounded-lg dark:bg-white dark:border-gray-700 border-secondary-50 border">
+  <a href="#" class="flex justify-center w-full h-[200px] box-decoration-clone">
     <img class=" rounded-t-lg w-fit h-[200px]" src="{{getProductImage()}}" alt="product image" />
   </a>
   <div class="dark:bg-white bg-cover bg-right-bottom bg-opacity-25" style="background-image: url(assets/logos/dome-logo-element-colour.png)">
     <div class="px-5 py-5 bg-secondary-50/95 dark:bg-white/95">
-      @if (productOff?.category) {
-        <bae-badge category="{{ category }}"></bae-badge>
+      @for (cat of categories; track cat.id) {
+        <bae-badge class="ml-2" [category]=cat></bae-badge>
       }
       <a href="#">
         <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{productOff?.name}}</h5>
       </a>
-      <div class="min-h-19 h-19 line-clamp-3 text-gray-600">{{productOff?.description}}</div>
+      <div class="min-h-19 h-19 line-clamp-2 text-gray-600">{{productOff?.description}}</div>
       <div class="flex w-full justify-between mt-2.5 mb-5 text-gray-500 font-mono">
         <div>{{productOff?.version || 'V: latest'}}</div>
         <div class="flex items-center">
@@ -40,7 +40,7 @@
 
       <div class="flex items-center justify-center">
 
-        <button data-modal-target="details-modal" data-modal-toggle="details-modal" type="button" class="flex items-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-100 dark:hover:bg-primary-50 dark:focus:ring-primary-100 mr-1">
+        <button (click)="toggleDetailsModal(productOff)"  type="button" class="flex items-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-100 dark:hover:bg-primary-50 dark:focus:ring-primary-100 mr-1">
           <svg class="w-[18px] h-[18px] text-white mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 14">
             <g stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
               <path d="M10 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
@@ -60,24 +60,15 @@
   <div class="relative w-full max-w-7xl max-h-full">
       <!-- Modal content -->
       <div class="relative bg-white rounded-lg shadow dark:border-gray-600 dark:bg-secondary-100 bg-cover bg-right-bottom">
-          <!-- Modal header
-          <div class="p-4 md:p-5 border-b rounded-t dark:border-gray-600 dark:bg-secondary-100 bg-cover bg-right-bottom bg-opacity-25" style="background-image: url(assets/logos/dome-logo-element-colour.png)">
-              <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-                {{productOff?.name}}
-              </h3>
-              @if (productOff?.category) {
-                <bae-badge category="{{ category }}"></bae-badge>
-              }
-          </div> -->
           <!-- Modal header -->
           <div class="flex items-center justify-between pr-2 pt-2 rounded-t dark:border-gray-600">
-            <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="details-modal">
+            <button (click)="hideModal()" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="details-modal">
                 <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
                 </svg>
                 <span class="sr-only">{{ 'CARD._close' | translate }}</span>
             </button>
-        </div>
+          </div>
           <!-- Modal body -->
           <div class="p-4 md:p-5 grid grid-cols-2 gap-4">
             <div class="flex items-center justify-center w-full box-decoration-clone bg-white rounded-lg dark:bg-secondary-50 dark:border-gray-700 border-secondary-50" >
@@ -104,30 +95,28 @@
                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.583 5.445h.01M8.86 16.71l-6.573-6.63a.993.993 0 0 1 0-1.4l7.329-7.394A.98.98 0 0 1 10.31 1l5.734.007A1.968 1.968 0 0 1 18 2.983v5.5a.994.994 0 0 1-.316.727l-7.439 7.5a.975.975 0 0 1-1.385.001Z"/>
                 </svg>
                 {{ 'CARD._categories' | translate }}:
-                @if (productOff?.category) {
-                  <bae-badge class="ml-2" category="{{ category }}"></bae-badge>
+                @for (cat of categories; track cat.id) {
+                  <bae-badge class="ml-2" [category]=cat></bae-badge>
                 }
               </div>
               <h5 class="font-semibold tracking-tight text-primary-100 dark:text-primary-50">{{ 'CARD._prod_details' | translate }}:</h5>
               <div class="min-h-19 h-19 line-clamp-3 dark:text-secondary-50">{{productOff?.description}}</div>
               <h5 class="font-semibold tracking-tight text-primary-100 dark:text-primary-50">{{ 'CARD._comp_profile' | translate }}:</h5>
               <ul class="max-w-md space-y-1 list-disc list-inside dark:text-secondary-50">
-                <li>EU Cloud Security: Not achieved yet</li>
-                <li>EU Cloud Rulebook: Not achieved yet</li>
-                <li>ISO 27001: Not achieved yet</li>
-                <li>ISO 27017: Not achieved yet</li>
-                <li>ISO 17025: Not achieved yet</li>
+                @for (char of prodSpec.productSpecCharacteristic; track char.id) {
+                <li>{{char.name}}: {{char.productSpecCharacteristicValue?.at(0)?.value}}</li>
+                }
               </ul>
               <h5 class="font-semibold tracking-tight text-primary-100 dark:text-primary-50">{{ 'CARD._extra_info' | translate }}:</h5>
               <div class="grid grid-cols-2 gap-4">
                 <ul class="max-w-md space-y-1 list-disc list-inside dark:text-secondary-50">
-                  <li>{{ 'CARD._offer_version' | translate }}: 0.1</li>
-                  <li>{{ 'CARD._product_name' | translate }}: nombre</li>
-                  <li>{{ 'CARD._brand' | translate }}: ENG</li>
+                  <li>{{ 'CARD._offer_version' | translate }}: {{productOff?.version}}</li>
+                  <li>{{ 'CARD._product_name' | translate }}: {{prodSpec.name}}</li>
+                  <li>{{ 'CARD._brand' | translate }}: {{prodSpec.brand}}</li>
                 </ul>
                 <ul class="max-w-md space-y-1 list-disc list-inside dark:text-secondary-50">
-                  <li>{{ 'CARD._last_update' | translate }}: Wednesday, November 15th 2023, 6:58 pm</li>
-                  <li>{{ 'CARD._product_version' | translate }}: 0.1</li>
+                  <li>{{ 'CARD._last_update' | translate }}: {{productOff?.lastUpdate | date:'dd/MM/yy, HH:mm'}}</li>
+                  <li>{{ 'CARD._product_version' | translate }}: {{prodSpec.version}}</li>
                   <li>{{ 'CARD._id_number' | translate }}: XX</li>
                 </ul>
               </div>
