--- a/src/app/shared/categories-filter/categories-filter.component.html
+++ b/src/app/shared/categories-filter/categories-filter.component.html
@@ -1,5 +1,5 @@
 <h2 class="text-2xl dark:text-secondary-50 p-2">Categories</h2>
-<div id="accordion-collapse" data-accordion="open" class="w-1/4 md:w-1/5">
+<div id="accordion-collapse" data-accordion="open" >
 @for(category of categories; track category.id; let idx = $index) {
 
     <h2 [id]="'accordion-heading-'+idx">
@@ -18,7 +18,6 @@
     <div [id]="'accordion-body-'+idx" class="hidden" [attr.aria-labelledby]="'accordion-heading-'+idx">
       <div class="p-2 border border-b-0 border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
-
           <ul class="grid w-full gap-2">
             @for(child of category.children; track child.id) {
               <li>
@@ -31,6 +30,6 @@
     </div>
   }
 } @empty {
-
+  
 }
 </div>
