--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="text-white border-gray-200 bg-primary-100 dark:bg-secondary-100 dark:border-gray-700">
+<nav class="text-white border-gray-200 h-[75px] bg-primary-100 dark:bg-secondary-100 dark:border-gray-700">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="#" class="flex items-center">
       <img src="assets/logos/DOME_Icon_White.svg" class="h-8 mr-3" alt="DOME Marketplace Logo" />
